--- a/install
+++ b/install
@@ -16,3 +16,11 @@ git config --global core.excludesfile ~/.gitignore
 git config --global push.default simple
 git config --global color.ui auto
 git config --global alias.amend "commit --amend"
+
+# Install SDKman
+curl -s "https://get.sdkman.io" | bash
+
+# Setup workdir
+mkdir -p ~/Dev/src/github.com/jdxcode
+cd ~/Dev/src/github.com/jdxcode
+git clone git@github.com:jdxcode/gh.git
